refactor: fix css paths

--- a/devWebPage.html
+++ b/devWebPage.html
@@ -14,8 +14,8 @@
     <!-- <link rel="stylesheet" href="assets/css/navBar.css">
     
     <link rel="stylesheet" href="assets/css/footer.css"> -->
-    <link rel="stylesheet" href="CSS/HEADER-FOOTER.CSS">
-    <link rel="stylesheet" href="CSS/cssWeb/devWeb.css">
+    <link rel="stylesheet" href="assets/css/HEADER-FOOTER.CSS">
+    <link rel="stylesheet" href="assets/css/devWeb.css">
 
     <!-- icons set -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
