--- a/consultoria.html
+++ b/consultoria.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../header-footer-definitivo/HEADER-FOOTER.CSS">
+    <!-- <link rel="stylesheet" href="../header-footer-definitivo/HEADER-FOOTER.CSS"> -->
     <!-- Colocando o icone do titulo da site -->
     <link rel="shortcut icon" href="assets/img/favicon/android-chrome-512x512.png" type="image/x-icon">
-    <link rel="stylesheet" href="CSS/consultoria.css">
+    <link rel="stylesheet" href="assets/css/consultoria.css">
     <a href="https://storyset.com/business"></a>
     <title>Multi/Consultoria</title>
 </head>
