--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Lincando o css -->
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- Colocando o icone do titulo da site -->
     <link rel="shortcut icon" href="assets/img/favicon/android-chrome-512x512.png" type="image/x-icon">
     <script src="carrossel.js" defer></script>
