--- a/manutencao.html
+++ b/manutencao.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="CSS/HEADER-FOOTER.CSS">
     <!-- Colocando o icone do titulo da site -->
     <link rel="shortcut icon" href="assets/img/favicon/android-chrome-512x512.png" type="image/x-icon">
-    <link rel="stylesheet" href="CSS/manutencao.css">
+    <link rel="stylesheet" href="assets/css/manutencao.css">
     <title>Multi/Manutenção</title>
 </head>
 
