--- a/manutencao.html
+++ b/manutencao.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn  +CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="CSS/HEADER-FOOTER.CSS">
+    <link rel="stylesheet" href="assets/css/HEADER-FOOTER.CSS">
     <!-- Colocando o icone do titulo da site -->
     <link rel="shortcut icon" href="assets/img/favicon/android-chrome-512x512.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/manutencao.css">
