--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
                     </div>
 
                     <li>
-                        <h4>Estamos totalmente comprometidos em garantir a plena satisfação do cliente e oferecer um valor agregado significativo. Acreditamos firmemente na importância de cada indivíduo, o que nos motiva a nos esforçarmos ao máximo para criar um impacto positivo tanto nas vidas das pessoas quanto no contexto global.</h4>
+                        <h4>Nosso objetivo é expandir e crescer, garantindo a total satisfação dos clientes por meio de
+                            experiências excepcionais e impactantes.</h4>
                     </li>
                 </div>
 
@@ -183,8 +184,7 @@
                 </div>
 
                 <li>
-                    <h4>O grande objetivo é expandir e crescer, garantindo a total satisfação dos clientes por meio de
-                        experiências excepcionais e impactantes.</h4>
+                    <h4>Estamos totalmente comprometidos em garantir a plena satisfação do cliente e oferecer um valor agregado significativo. Acreditamos firmemente na importância de cada indivíduo, o que nos motiva a nos esforçarmos ao máximo para criar um impacto positivo tanto nas vidas das pessoas quanto no contexto global.</h4>
                 </li>
             </ul>
 
