--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Colocando o icone do titulo da site -->
     <link rel="shortcut icon" href="assets/img/favicon/android-chrome-512x512.png" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/responsividade.css">
     <script src="carrossel.js" defer></script>
     <!-- Titulo do site -->
     <title>Multi Tecnology</title>
@@ -44,7 +45,7 @@
                 <ul>
                     <li><a href='index.html'>início</a></li>
                     <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#Nosso Time">Nosso Time</a></li>
+                    <li><a href="#NossoTime">Nosso Time</a></li>
                     <li><a href="tiverde.html">Ti Verde</a></li>
 
                 </ul>
@@ -58,7 +59,11 @@
                 src="assets/img/whatsapp.png" alt="" class="contato-zap"></a>
         <!-- onde começa sessão do inicio -->
         <section id="inicio">
-
+            <div class="efeito-mouse">
+                <div class="mouse">
+                    <div class="rolamento"></div>
+                </div>
+            </div>
             <div class="teste"></div>
 
             <div class="slogan-inicio">
@@ -68,13 +73,6 @@
 
 
 
-
-
-            <div class="efeito-mouse">
-                <div class="mouse">
-                    <div class="rolamento"></div>
-                </div>
-            </div>
 
 
         </section>
@@ -110,7 +108,7 @@
 
             <!-- sesseção sobre -->
         </section>
-        <section id="Nosso Time">
+        <section id="NossoTime">
             <div class="sobre">
                 <div class="carrosel">
                     <div class="container_imgs" id="img">
